--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,7 +18,7 @@ services:
     container_name: smg_wordpress
     depends_on:
       - smg_db
-    image: wordpress:latest
+    image: wordpress:php8.1-fpm
     volumes:
       - ./data:/var/www/html/wp-content
     restart: unless-stopped
@@ -34,6 +34,12 @@ services:
       - traefik.enable=true
       - traefik.http.routers.smg.entrypoints=http
       - traefik.http.routers.smg.rule=Host("champignons-geneve.ch", "www.champignons-geneve.ch")
+      - traefik.http.middlewares.smg-https-redirect.redirectscheme.scheme=https
+      - traefik.http.routers.smg.middlewares=smg-https-redirect
+      - traefik.http.routers.smg-secure.entrypoints=https
+      - traefik.http.routers.smg-secure.rule=Host("champignons-geneve.ch", "www.champignons-geneve.ch")
+      - traefik.http.routers.smg-secure.tls=true
+      - traefik.http.routers.smg-secure.tls.certresolver=http
       - traefik.docker.network=proxy
 
 networks:
