Add gutenberg for events manager

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,6 +32,8 @@ services:
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
       WORDPRESS_DB_NAME: ${DB_NAME}
       WORDPRESS_TABLE_PREFIX: ${DB_PREFIX}
+      WORDPRESS_CONFIG_EXTRA: |
+        define('EM_GUTENBERG', true);
     labels:
       - traefik.enable=true
       - traefik.http.routers.smg.entrypoints=http
